--- a/Web-Apps-Project/Web-Apps-Project.csproj
+++ b/Web-Apps-Project/Web-Apps-Project.csproj
@@ -85,6 +85,8 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Login-Page.html" />
+    <Content Include="Login-Style.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
